# hero-sim

./: .clang-format  .gdbinit  .gitignore  .gitmodules  Arch1x1.vcd  CMakeLists.txt  Prog_trace.vcd  README.md  automate.py  computeblob.vcd  conv2d.py  graphs.ipynb  ifmap_res_dict.csv  ifmap_sweep_dict.pickle  in_progress_validation.gtkw  pyproject.toml  requirements.txt  systemc.imp  verify.py
VCD_Examples/: SAM_concurrent operation_illustrated.vcd  SAM_write_1D_illustrated.vcd
data/: res_dict.csv  sim_res_dict.pickle  verify_results.csv
fig_generation_scripts/: energy.ipynb  macro_stats.ipynb  utilization.ipynb
hero-sim-proto/: CMakeLists.txt  result.proto
include/: AddressGenerator.hh  Arch1x1.vcd  Connector.hh  Descriptor.hh  GlobalControl.hh  Memory.hh  Memory_Channel.hh  MultiProgramSender.hh  ProcEngine.hh  SAM.hh  SSM.hh  bytePrinter.hh  channelEnable.hh  descriptor_compiler.hh  dmaProducer.hh  dmaTestRegisterMap.hh  dmaTester.hh  hero.hh  layer_generation.hh  pe.hh  sig2sock.hh  sock2sig.hh  stringProducer.hh
proto/: CMakeLists.txt  result.proto
scripts/: ModelAnalysis.py  TEMPO.py  collect_arch_metrics.py  compile_result_proto.sh  config.py  energy.ipynb  eval_all_timm_networks.py  frontend.py  generate_arch_metrics.py  generate_layer_metrics.py  generate_layer_properties.py  generate_processed_models.py  get_unique_layers_within_models.py  latency.ipynb  macro_stats.ipynb  per_network.ipynb  playground.ipynb  profile_processed_models.py  profile_timm_lib.py  resources.ipynb  result_pb2.py  schema.py  timm_test_case_generator.py  utilization.ipynb  verify.py
scripts/fig_generation/: per_network.ipynb  resources.ipynb
src/: AddressGenerator.cc  AddressGenerator.cpp  AddressGenerator_tb.cc  Arch1x1.vcd  Compute.cpp  Connector.cpp  Descriptor.cc  GlobalControl.cc  Memory.cc  Memory_Channel.cc  Memory_Channel.cpp  MultiProgramSender.cc  ProcEngine.cc  SAM.cc  SAM.cpp  SAM_tb.cc  SAM_tb.cpp  SSM.cc  bytePrinter.cc  channelEnable.cc  descriptor_compiler.cc  dmaProducer.cc  dmaTester.cc  hero.cc  hero_sim_backend.cc  layer_generation.cc  pe.cc  sig2sock.cc  sock2sig.cc  stringProducer.cc
tests/: AddressGenerator_tb.cc  AddressGenerator_tb.cpp  Arch1x1.vcd  CMakeLists.txt  Connector_tb.cc  Connector_tb.cpp  Memory_tb.cc  Memory_tb.cpp  Poly_Compute_tb.cc  SAM_tb.cc  SSM_tb.cc  axidma_mem_tb.cc  axidma_mem_tb.hh  dissemination_tb.cc  dissemination_tb.hh  estimation_enviornment.cc  hero_sim_backend.cc  poly_compute_tb.cc  sock2sig_tb.cc
torchscript_explore/: CMakeLists.txt  example-app.cpp
xilinx/: CMakeLists.txt
xilinx/include/: demo-dma.h  iconnect.h  memory.h  xilinx-axidma.h
xilinx/src/: demo-dma.cc  memory.cc  xilinx-axidma.cc
