[tool.poetry]
name = "cnn_processor_model"
version = "0.1.0"
description = ""
authors = ["asultan123 <asultan@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "3.9.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
